# tyt

./: CLAUDE.md  Cargo.toml  README.md  package.json
projects/tl-fbx/: Cargo.toml  README.md
projects/tl-fbx/src/: lib.rs  main.rs  tl_fbx.rs
projects/tl-fbx/src/commands/: mod.rs
projects/tlt/: Cargo.toml  README.md
projects/tlt/src/: lib.rs  main.rs  tlt.rs
projects/ty-fbx/: Cargo.toml  README.md
projects/ty-fbx/src/: blender.rs  dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  script.rs  ty_fbx.rs
projects/ty-fbx/src/blender/: common.py  fbx_extract_mesh.py  fbx_rename_meshes.py
projects/ty-fbx/src/commands/: extract.rs  reduce.rs
projects/ty-math/: Cargo.toml  README.md
projects/ty-math-serde/: Cargo.toml  README.md
projects/ty-math-serde/src/: lib.rs  ty_rgba_color_serde.rs  ty_vector3_serde.rs
projects/ty-math/src/: lib.rs  ty_rgba_color.rs  ty_vector3.rs
projects/tyt/: Cargo.toml  README.md
projects/tyt-common/: Cargo.toml  README.md
projects/tyt-common/src/: create_temp_dir.rs  exec.rs  exec_failed.rs  lib.rs  temp_counter_next.rs  unique_sibling_temp_path.rs  unique_temp_path.rs
projects/tyt-cubemap/: Cargo.toml  README.md
projects/tyt-cubemap/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  result.rs  tyt_cubemap.rs
projects/tyt-cubemap/src/commands/: equirect_to_faces.rs  equirect_to_net.rs  faces_to_equirect.rs  faces_to_pixelated_equirect.rs  mod.rs  pixelate_faces.rs  square_image.rs
projects/tyt-cubemap/src/utilities/: faces_to_equirect.rs  mod.rs  pixelate_faces.rs  square.rs
projects/tyt-fbx/: Cargo.toml  README.md
projects/tyt-fbx/src/: blender.rs  dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt_fbx.rs
projects/tyt-fbx/src/blender/: extract_faces_and_vertices.py  fbx_extract_mesh.py  fbx_hierarchy.py  fbx_hierarchy_json.py  fbx_reduce_to_single_mesh.py
projects/tyt-fbx/src/commands/: create_point_cloud.rs  extract.rs  hierarchy.rs  mod.rs  reduce.rs  rename.rs
projects/tyt-fbx/src/utilities/: blender.rs  extract_json.rs  mesh_with_uvs.rs  mod.rs
projects/tyt-fs/: Cargo.toml  README.md
projects/tyt-fs/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  prefs.rs  tyt_fs.rs
projects/tyt-fs/src/commands/: find.rs  mod.rs  move_to_scratch.rs
projects/tyt-fs/src/implementation/: dependencies_impl.rs  fs_prefs.rs  mod.rs
projects/tyt-fs/src/utilities/: find_files.rs  mod.rs
projects/tyt-image/: Cargo.toml  README.md
projects/tyt-image/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt_image.rs
projects/tyt-image/src/commands/: mod.rs  pixelate.rs  square_image.rs
projects/tyt-injection/: Cargo.toml  README.md
projects/tyt-injection/src/: args.rs  copy_dir.rs  exec.rs  exec_error.rs  exec_map.rs  lib.rs  list_dir.rs  load_image_rgba.rs  match_glob.rs  parse_json.rs  parse_mesh_json.rs  parse_mesh_with_uvs_json.rs  read_file.rs  remove_dir_all.rs  remove_file.rs  serialize_json_pretty.rs  serialize_points_and_colors_json.rs  serialize_points_json.rs  unique_temp_path.rs  write_file.rs  write_stdout.rs
projects/tyt-material/: Cargo.toml  README.md
projects/tyt-material/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt_material.rs
projects/tyt-material/src/commands/: create_mse.rs  mod.rs
projects/tyt-meta/: Cargo.toml  README.md
projects/tyt-meta/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt_meta.rs
projects/tyt-meta/src/commands/: create_command.rs  mod.rs
projects/tyt-meta/src/commands/create_command/: add_command_to_crate.rs  cargo_toml_template.rs  command_file_template.rs  create_command.rs  create_crate.rs  dependencies_rs_template.rs  error_rs_template.rs  insert_command_mod.rs  insert_enum_variant.rs  kebab_to_snake_case.rs  lib_rs_template.rs  main_rs_template.rs  mod.rs  readme_template.rs  result_rs_template.rs  snake.rs  wire_tyt_cargo_toml.rs  wire_tyt_dependencies.rs  wire_tyt_dependencies_impl.rs  wire_tyt_error.rs  wire_tyt_tyt_rs.rs  wire_workspace_cargo_toml.rs
projects/tyt-meta/src/commands/create_command/templates/: cargo_toml_template.rs  dependencies_impl_rs_template.rs  license_template.rs  main_rs_template.rs  mod.rs  tyt_enum_template_empty.rs
projects/tyt-preferences/: Cargo.toml
projects/tyt-preferences/src/: dependencies.rs  dependencies_impl.rs  deserialize_prefs.rs  lib.rs  prefs.rs
projects/tyt-preferences/src/load/: load_git_prefs.rs  load_prefs.rs  load_prefs_from_dir.rs  load_user_prefs.rs  mod.rs
projects/tyt-vmax/: Cargo.toml  README.md
projects/tyt-vmax/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt_vmax.rs
projects/tyt-vmax/src/commands/: hierarchy.rs  mod.rs  pack.rs  rename_node.rs
projects/tyt/src/: dependencies.rs  dependencies_impl.rs  error.rs  lib.rs  main.rs  tyt.rs
projects/vmax/: Cargo.toml  README.md
projects/vmax-serde/: Cargo.toml  README.md
projects/vmax-serde/src/: lib.rs  vmax_group_serde.rs  vmax_object_serde.rs  vmax_scene_serde.rs
projects/vmax/src/: lib.rs  vmax_group.rs  vmax_object.rs  vmax_scene.rs
