[workspace]
members = [
    "projects/tyt",
    "projects/tyt-common",
    "projects/tyt-cubemap",
    "projects/tyt-fbx",
    "projects/tyt-image",
    "projects/tyt-injection",
    "projects/tyt-material",
    "projects/ty-math",
    "projects/ty-math-serde",
    "projects/tyt-meta",
]
resolver = "2"

[patch.crates-io]
tyt = { path = "projects/tyt" }
tyt-common = { path = "projects/tyt-common" }
tyt-cubemap = { path = "projects/tyt-cubemap" }
tyt-fbx = { path = "projects/tyt-fbx" }
tyt-image = { path = "projects/tyt-image" }
tyt-injection = { path = "projects/tyt-injection" }
tyt-material = { path = "projects/tyt-material" }
ty-math = { path = "projects/ty-math" }
ty-math-serde = { path = "projects/ty-math-serde" }
tyt-meta = { path = "projects/tyt-meta" }
