[package]
name = "tyt-fs"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Operations on the filesystem"
autobins = false

[[bin]]
name = "tyt-fs"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = { version = "4.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tyt-common = { version = "0.1.0" }
tyt-injection = { version = "0.1.0", optional = true }
tyt-preferences = { version = "0.1.0", optional = true }

[features]
default = ["impl"]
impl = ["dep:serde", "dep:tyt-injection", "dep:tyt-preferences", "tyt-preferences/impl"]
bin = ["impl", "dep:clap_complete"]
