[package]
name = "tyt-injection"
version = "0.1.4"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/tyleo/tyt"
description = "Dependency injection implementations for tyt sub-crates."

[dependencies]
globset = "0.4"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
ty-math = { version = "0.1.0" }
ty-math-serde = { version = "0.1.0" }
tyt-common = { version = "0.1.0" }
