[package]
name = "tyt-material"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Command-line tools for working with materials."

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
glob = { version = "0.3", optional = true }
tyt-common = { version = "0.1.0", optional = true }

[features]
default = ["impl"]
impl = ["dep:tyt-common", "glob"]
