[package]
name = "tyt-material"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Command-line tools for working with materials."
autobins = false

[[bin]]
name = "tyt-material"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = { version = "4.5", optional = true }
glob = { version = "0.3", optional = true }
tyt-common = { version = "0.1.0" }
tyt-injection = { version = "0.1.0", optional = true }

[features]
default = ["impl"]
impl = ["dep:tyt-injection", "glob"]
bin = ["impl", "dep:clap_complete"]
