[package]
name = "tyt-vmax"
version = "0.1.2"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/tyleo/tyt"
description = "Commands for working with Voxel Max."
autobins = false

[[bin]]
name = "vmax"
path = "src/main.rs"
required-features = ["bin"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
clap_complete = { version = "4.5", optional = true }
tyt-common = { version = "0.1.0" }
tyt-injection = { version = "0.1.0", optional = true }
vmax = { version = "0.1.0" }
vmax-serde = { version = "0.1.0", optional = true }

[features]
default = ["impl"]
impl = ["dep:tyt-injection", "dep:vmax-serde"]
bin = ["impl", "dep:clap_complete"]
