[package]
name = "tyt"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A single app, `tyt`, which ties all my command-line tools together."

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
tyt-fbx = { version = "0.1.0" }
tyt-material = { version = "0.1.0" }

[features]
default = ["impl"]
impl = ["tyt-fbx/impl", "tyt-material/impl"]
